src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__structured_retryable_sidecar_error_does_not_terminate_session.snap
---
source: src/agents/streaming/event_loop_tests.rs
assertion_line: 571
expression: entries
---
- event_type: turn/started
  emitted: []
  side_effects: []
- event_type: error
  emitted:
    - kind: RetryStatus
      attempt: 1
      max_retries: 100
    - kind: Update
      messages: []
  side_effects: []
- event_type: item/agentMessage/delta
  emitted: []
  side_effects: []
- event_type: turn/completed
  emitted:
    - kind: Update
      messages:
        - role: system
          part_types:
            - text
          streaming: ~
  side_effects: []
- event_type: end
  emitted:
    - kind: Update
      messages:
        - role: system
          part_types:
            - text
          streaming: ~
    - kind: Done
      persisted: true
  side_effects: []
