src-tauri/src/agents/streaming/snapshots/helmor_lib__agents__streaming__event_loop_tests__user_input_request_emits_panel_marker_without_terminating.snap
---
source: src/agents/streaming/event_loop_tests.rs
expression: entries
---
- event_type: system
  emitted:
    - kind: Update
      messages: []
  side_effects: []
- event_type: assistant
  emitted:
    - kind: Update
      messages:
        - role: assistant
          part_types:
            - text
          streaming: ~
  side_effects: []
- event_type: userInputRequest
  emitted:
    - kind: Update
      messages:
        - role: assistant
          part_types:
            - text
          streaming: ~
    - kind: UserInputRequest
      user_input_id: tool-1
      source: Claude
      permission_mode: ~
      payload_kind: ask-user-question
  side_effects: []
